Fixes to the overflow of `gx-textblock` when `autoGrow = False` and `format = HTML`
issue: 91505

--- a/src/components/textblock/textblock.scss
+++ b/src/components/textblock/textblock.scss
@@ -1,5 +1,5 @@
 @import "../common/_base";
-@import "../common/common-styling-config";
+@import "../common/_common-styling-config";
 
 // Used to horizontally and vertically align the text
 @mixin alignment($text-align: null, $align-items: null) {
@@ -20,6 +20,19 @@
 
 // Default alignment which supports RTL
 @include alignment(start, flex-start);
+
+// Used when autoGrow = false and format = HTML
+gx-table-cell[min-height][max-height] {
+  gx-textblock {
+    & > .content.html-content {
+      .html-container {
+        .inner-content {
+          position: absolute;
+        }
+      }
+    }
+  }
+}
 
 gx-textblock {
   @include visibility(inline-flex);
@@ -55,8 +68,22 @@ gx-textblock {
       }
     }
 
+    // Used when format = HTML
     &.html-content {
       text-align: start;
+
+      .html-container {
+        display: flex;
+        flex: 1;
+        position: relative;
+        height: 100%;
+        overflow: hidden;
+
+        .inner-content {
+          position: relative;
+          width: 100%;
+        }
+      }
     }
   }
 }
